--- a/src/apps/Home/App.css
+++ b/src/apps/Home/App.css
@@ -3548,3 +3548,25 @@ body.is-loading #banner p {
     padding: 2em 1.5em 0.1em 1.5em;
   }
 }
+
+.contact-icon {
+  margin-right: 10px;
+}
+
+.contact-button {
+  text-align: left;
+  border: none;
+  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0);
+}
+
+.header-logo {
+  margin-top: 2em;
+  height: 2em;
+}
+
+@media screen and (max-width: 736px) {
+  .header-logo {
+    margin-top: 1.5em;
+    height: 2em;
+  }
+}
