Fixing integ tests and misc integrations
Signed-off-by: Alex <aafu@ucdavis.edu>

--- a/src/apps/Home/components/Spotlight.css
+++ b/src/apps/Home/components/Spotlight.css
@@ -7,6 +7,11 @@
   text-align: right;
 }
 
+/*.Spotlight.left {*/
+/*  flex-direction: row;*/
+/*  text-align: left;*/
+/*}*/
+
 .Spotlight .image {
   margin-bottom: 1em;
   width: 12em;
