[CodeFactor] Apply fixes

--- a/src/apps/Home/App.css
+++ b/src/apps/Home/App.css
@@ -185,19 +185,19 @@ body {
 }
 
 .row.\30 \25 > * {
-  padding: 0 0 0 0em;
+  padding: 0;
 }
 
 .row.\30 \25 {
-  margin: 0 0 -1px 0em;
+  margin: 0 0 -1px;
 }
 
 .row.uniform.\30 \25 > * {
-  padding: 0em 0 0 0em;
+  padding: 0;
 }
 
 .row.uniform.\30 \25 {
-  margin: 0em 0 -1px 0em;
+  margin: 0 0 -1px;
 }
 
 .row > * {
@@ -1269,7 +1269,7 @@ a.special:not(.button) {
   font-size: 0.8em;
   font-weight: 700;
   letter-spacing: 0.1em;
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
   text-transform: uppercase;
 }
 
@@ -1321,7 +1321,7 @@ i {
 }
 
 p {
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
 }
 
 h1,
@@ -1334,7 +1334,7 @@ h6 {
   font-family: Raleway, Helvetica, sans-serif;
   font-weight: 700;
   letter-spacing: 0.1em;
-  margin: 0 0 1em 0;
+  margin: 0 0 1em;
   text-transform: uppercase;
 }
 
@@ -1412,7 +1412,7 @@ sup {
 blockquote {
   border-left: solid 4px rgba(255, 255, 255, 0.125);
   font-style: italic;
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
   padding: 0.5em 0 0.5em 2em;
 }
 
@@ -1430,7 +1430,7 @@ pre {
   -webkit-overflow-scrolling: touch;
   font-family: 'Courier New', monospace;
   font-size: 0.9em;
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
 }
 
 pre code {
@@ -1472,11 +1472,11 @@ article.special {
 /* Form */
 
 form {
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
 }
 
 form .field {
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
 }
 
 form .field label {
@@ -1498,7 +1498,7 @@ label {
   font-size: 0.8em;
   font-weight: 700;
   letter-spacing: 0.1em;
-  margin: 0 0 0.7em 0;
+  margin: 0 0 0.7em;
   text-transform: uppercase;
 }
 
@@ -1773,7 +1773,7 @@ input[type='radio'] + label:before {
 
 .image.fit {
   display: block;
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
   width: 100%;
 }
 
@@ -1783,7 +1783,7 @@ input[type='radio'] + label:before {
 
 .image.main {
   display: block;
-  margin: 0 0 3em 0;
+  margin: 0 0 3em;
   width: 100%;
 }
 
@@ -1795,7 +1795,7 @@ input[type='radio'] + label:before {
 
 ol {
   list-style: decimal;
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
   padding-left: 1.25em;
 }
 
@@ -1805,7 +1805,7 @@ ol li {
 
 ul {
   list-style: disc;
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
   padding-left: 1em;
 }
 
@@ -1869,7 +1869,7 @@ ul.actions.small li {
 
 ul.actions.vertical li {
   display: block;
-  padding: 1em 0 0 0;
+  padding: 1em 0 0;
 }
 
 ul.actions.vertical li:first-child {
@@ -1881,7 +1881,7 @@ ul.actions.vertical li > * {
 }
 
 ul.actions.vertical.small li {
-  padding: 0.5em 0 0 0;
+  padding: 0.5em 0 0;
 }
 
 ul.actions.vertical.small li:first-child {
@@ -1916,11 +1916,11 @@ ul.actions.fit.small li {
 
 @media screen and (max-width: 640px) {
   ul.actions {
-    margin: 0 0 2em 0;
+    margin: 0 0 2em;
   }
 
   ul.actions li {
-    padding: 1em 0 0 0;
+    padding: 1em 0 0;
     display: block;
     text-align: center;
     width: 100%;
@@ -1936,7 +1936,7 @@ ul.actions.fit.small li {
   }
 
   ul.actions.small li {
-    padding: 0.5em 0 0 0;
+    padding: 0.5em 0 0;
   }
 
   ul.actions.small li:first-child {
@@ -1951,7 +1951,7 @@ ul.contact {
 
 ul.contact li {
   text-decoration: none;
-  margin: 2.5em 0 0 0;
+  margin: 2.5em 0 0;
   padding: 0 0 0 3.25em;
   position: relative;
 }
@@ -1985,18 +1985,18 @@ ul.contact li:first-child {
 
 @media screen and (max-width: 736px) {
   ul.contact li {
-    margin: 1.5em 0 0 0;
+    margin: 1.5em 0 0;
   }
 }
 
 dl {
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
 }
 
 dl dt {
   display: block;
   font-weight: 600;
-  margin: 0 0 1em 0;
+  margin: 0 0 1em;
 }
 
 dl dd {
@@ -2011,7 +2011,7 @@ dl dd {
 }
 
 table {
-  margin: 0 0 2em 0;
+  margin: 0 0 2em;
   width: 100%;
 }
 
@@ -2026,14 +2026,14 @@ table tbody tr:nth-child(2n + 1) {
 }
 
 table td {
-  padding: 0.75em 0.75em;
+  padding: 0.75em;
 }
 
 table th {
   color: #ffffff;
   font-size: 0.9em;
   font-weight: 600;
-  padding: 0 0.75em 0.75em 0.75em;
+  padding: 0 0.75em 0.75em;
   text-align: left;
 }
 
@@ -2171,7 +2171,7 @@ input[type='button'].fit,
 button.fit,
 .button.fit {
   display: block;
-  margin: 0 0 1em 0;
+  margin: 0 0 1em;
   width: 100%;
 }
 
@@ -2243,7 +2243,7 @@ body.is-menu-visible #menu .inner {
 /* Banner */
 
 #banner {
-  padding: 10em 0 4.75em 0;
+  padding: 10em 0 4.75em;
 }
 
 #banner .inner {
@@ -2261,7 +2261,7 @@ body.is-menu-visible #menu .inner {
   -ms-transform: translateY(0);
   transform: translateY(0);
   opacity: 1;
-  margin: 0 0 1.3em 0;
+  margin: 0 0 1.3em;
 }
 
 #banner .logo .icon {
@@ -2334,7 +2334,7 @@ body.is-menu-visible #menu .inner {
 
 @media screen and (max-width: 1280px) {
   #banner {
-    padding: 7em 0 8.25em 0;
+    padding: 7em 0 8.25em;
     background-color: #2e3141;
     background-size: auto, cover;
     background-position: center, center;
@@ -2344,7 +2344,7 @@ body.is-menu-visible #menu .inner {
 
 @media screen and (max-width: 980px) {
   #banner {
-    padding: 12em 3em 12.375em 3em;
+    padding: 12em 3em 12.375em;
     margin-bottom: -4.75em;
   }
 
@@ -2355,12 +2355,12 @@ body.is-menu-visible #menu .inner {
 
 @media screen and (max-width: 736px) {
   #banner {
-    padding: 5em 2em 4.25em 2em;
+    padding: 5em 2em 4.25em;
     margin-bottom: -2.5em;
   }
 
   #banner .logo {
-    margin: 0 0 1em 0;
+    margin: 0 0 1em;
   }
 
   #banner .logo .icon {
@@ -2411,7 +2411,7 @@ body.is-loading #banner p {
 /* Wrapper */
 
 #wrapper > header {
-  padding: 11em 0 2.25em 0;
+  padding: 11em 0 2.25em;
 }
 
 #wrapper > header .inner {
@@ -2437,7 +2437,7 @@ body.is-loading #banner p {
 
 @media screen and (max-width: 1280px) {
   #wrapper > header {
-    padding: 9em 0 6.25em 0;
+    padding: 9em 0 6.25em;
     background-color: #2e3141;
     background-size: auto, cover;
     background-position: center, 0% 30%;
@@ -2447,7 +2447,7 @@ body.is-loading #banner p {
 
 @media screen and (max-width: 980px) {
   #wrapper > header {
-    padding: 11em 3em 7.375em 3em;
+    padding: 11em 3em 7.375em;
     background-size: auto, cover;
     background-position: center, 0% 0%;
     margin-bottom: -4.75em;
@@ -2460,7 +2460,7 @@ body.is-loading #banner p {
 
 @media screen and (max-width: 736px) {
   #wrapper > header {
-    padding: 6.5em 2em 3em 2em;
+    padding: 6.5em 2em 3em;
     background-size: auto, 125%;
     margin-bottom: -2.5em;
   }
@@ -2525,7 +2525,7 @@ body.is-loading #banner p {
 }
 
 .wrapper .inner {
-  padding: 3em 0 1em 0;
+  padding: 3em 0 1em;
   margin: 0 auto;
   width: 55em;
 }
@@ -2694,7 +2694,7 @@ body.is-loading #banner p {
   }
 
   .wrapper .inner {
-    padding: 3em 3em 1em 3em;
+    padding: 3em 3em 1em;
     width: 100%;
   }
 
@@ -2728,7 +2728,7 @@ body.is-loading #banner p {
   }
 
   .wrapper .inner {
-    padding: 2em 2em 0.1em 2em;
+    padding: 2em 2em 0.1em;
   }
 
   .wrapper.spotlight .inner {
@@ -2754,7 +2754,7 @@ body.is-loading #banner p {
   }
 
   .wrapper.spotlight .image {
-    margin: 0 0 1em 0 !important;
+    margin: 0 0 1em !important;
     max-width: 85%;
     width: 12em;
   }
@@ -2762,7 +2762,7 @@ body.is-loading #banner p {
 
 @media screen and (max-width: 360px) {
   .wrapper .inner {
-    padding: 2em 1.5em 0.1em 1.5em;
+    padding: 2em 1.5em 0.1em;
   }
 }
 
@@ -2773,7 +2773,7 @@ body.is-loading #banner p {
 }
 
 #footer .inner {
-  padding: 5em 0 3em 0;
+  padding: 5em 0 3em;
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
@@ -2806,8 +2806,8 @@ body.is-loading #banner p {
 #footer .inner .copyright {
   border-top: solid 2px rgba(255, 255, 255, 0.125);
   list-style: none;
-  margin: 4em 0 2em 0;
-  padding: 2em 0 0 0;
+  margin: 4em 0 2em;
+  padding: 2em 0 0;
   width: 100%;
 }
 
@@ -2848,23 +2848,23 @@ body.is-loading #banner p {
   }
 
   #footer .inner {
-    padding: 3em 3em 1em 3em;
+    padding: 3em 3em 1em;
     display: block;
     width: 100%;
   }
 
   #footer .inner form {
     width: 100%;
-    margin: 0 0 4em 0;
+    margin: 0 0 4em;
   }
 
   #footer .inner .contact {
     width: 100%;
-    margin: 0 0 4em 0;
+    margin: 0 0 4em;
   }
 
   #footer .inner .copyright {
-    margin: 4em 0 2em 0;
+    margin: 4em 0 2em;
   }
 }
 
@@ -2875,15 +2875,15 @@ body.is-loading #banner p {
   }
 
   #footer .inner {
-    padding: 2em 2em 0.1em 2em;
+    padding: 2em 2em 0.1em;
   }
 
   #footer .inner form {
-    margin: 0 0 3em 0;
+    margin: 0 0 3em;
   }
 
   #footer .inner .contact {
-    margin: 0 0 3em 0;
+    margin: 0 0 3em;
   }
 }
 
@@ -2891,7 +2891,7 @@ body.is-loading #banner p {
   #footer .inner .copyright li {
     border-left: 0;
     display: block;
-    margin: 1em 0 0 0;
+    margin: 1em 0 0;
     padding-left: 0;
   }
 
@@ -2902,7 +2902,7 @@ body.is-loading #banner p {
 
 @media screen and (max-width: 360px) {
   #footer .inner {
-    padding: 2em 1.5em 0.1em 1.5em;
+    padding: 2em 1.5em 0.1em;
   }
 }
 
